Take photo script

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-<h1>Test</h1>
+    <main>
+        <video id="videoPlayer" autoplay playsinline></video>
+        <div class="settings">
+            <button id="buttonTakePhoto" class="button">Сделать снимок</button>
+        </div>
+    </main>
+    <aside>
+        <div id="photoWrapper"></div>
+    </aside>
+
+    <script src="home.js" defer></script>
 </body>
 </html>
